fix footer text wrap

--- a/src/core.css
+++ b/src/core.css
@@ -1101,6 +1101,7 @@ main {
 
 .footer.list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   max-width: 1400px;
   margin: 0 auto; }
