--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -279,6 +279,7 @@
 }
 .footer.list{
   display:flex;
+  flex-wrap:wrap;
   justify-content: center;
   max-width:1400px;
   margin:0 auto;
